tests/ui/error-codes/E0778.stderr
error: `[instruction_set]` requires an argument
  --> $DIR/E0778.rs:1:1
   |
LL | #[instruction_set()]
   | ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

